# document-llm-analysis

./: .dockerignore  .env.example  .gitignore  .ruff.toml  DEVELOPMENT_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  TECH_DOC.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  mcp_config.json  task_plan.md  專案說明書.md
.agent/tasks/: astute-rag-improvement-plan.md
backend/: .coverage  pyproject.toml  test.db
backend/app/: main.py
backend/app/agent/: graph.py  nodes.py  state.py  tools.py
backend/app/api/: agent.py  analytics.py  auth.py  batch.py  cache_maintenance.py  chroma_maintenance.py  data_files.py  health.py  ip_control.py  llm.py  llm_queue.py  mcp_tools.py  modeling.py  query.py  rag.py  reports.py  stats.py  upload.py  users.py
backend/app/core/: config.py  database.py  exceptions.py  logging_config.py  metrics.py  security.py  text_cleaner.py
backend/app/models/: analytics.py  batch.py  ip_control.py  llm.py  modeling.py  query.py  rag.py  reports.py  stats.py  user.py
backend/app/services/: __init__.py  ai_interpreter.py  astute_rag_service.py  cache_manager.py  cache_service.py  chroma_optimizer.py  context_compressor.py  document_metadata_service.py  document_service.py  duckdb_service.py  excel_service.py  graph_rag_service.py  knowledge_consolidator.py  langextract_service.py  llm_queue.py  llm_service.py  mcp_client_manager.py  modeling_core.py  project_service.py  prompt_manager.py  rag_service.py  redis_cache.py  reliability_scorer.py  report_exporter.py  searxng_service.py  semantic_chunker.py  skills_registry.py  statistical_tests.py
backend/app/services/llm/: __init__.py  analysis.py  providers.py  service.py  stream_filter.py  token_utils.py
backend/app/services/rag/: __init__.py  base.py  indexer.py  searcher.py
backend/app/utils/: __init__.py  excel_processor.py  file_resolver.py
backend/scripts/: create_admin.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_health.py  test_api_upload.py
backend/tests/unit/: test_auth.py  test_exceptions.py  test_file_resolver.py  test_llm_queue.py  test_logging_config.py  test_security.py  test_statistical_tests.py
docs/: STATISTICS_GUIDE.md
frontend/: Dockerfile  PERFORMANCE.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: file-uploader.tsx  llm-queue-status.tsx  mcp-tools.tsx  providers.tsx
frontend/src/hooks/: useAnalytics.ts  useChat.ts
monitoring/prometheus/: alert.rules  prometheus.yml
scripts/: test_pdfplumber.py
(+43 files in other folders)
